--- a/fairplay/admin/templates/admin/header.html
+++ b/fairplay/admin/templates/admin/header.html
@@ -20,7 +20,13 @@
       <div class="offcanvas-body">
         <ul class="navbar-nav justify-content-start flex-grow-1 pe-3">
           <li class="nav-item">
-            <a class="nav-link" href="#">Console</a>
+            <a class="nav-link" href="/admin/courses">Courses</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/admin/games">Games</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/admin/players">Players</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
