--- a/fairplay/admin/templates/admin/audit-events.html
+++ b/fairplay/admin/templates/admin/audit-events.html
@@ -16,7 +16,9 @@
       columns=[
         {'name': 'date', 'label': 'Date', 'render': render_date},
         {'name': 'category', 'label': 'Category'},
+        {'name': 'event', 'label': 'Event'},
         {'name': 'message', 'label': 'Message'},
+        {'name': 'remote_addr', 'label': 'IP Address'},
       ],
       create=False,
       list_endpoint='.audit_events',
