--- a/fairplay/admin/templates/admin/widgets/user.html
+++ b/fairplay/admin/templates/admin/widgets/user.html
@@ -1,7 +1,8 @@
 {% macro render_user(user) %}
 {% if user %}
-<img class="rounded-circle me-1" width="24" height="24" src="{{ user.photo_url }}">
-<span>{{ user.name }}</span>
+<div class="text-nowrap">
+  <img class="rounded-circle me-1" width="24" height="24" src="{{ user.photo_url }}"><span>{{ user.name }}</span>
+</div>
 {% else %}
 None
 {% endif %}
