--- a/fairplay/courses/templates/admin/courses/courses.html
+++ b/fairplay/courses/templates/admin/courses/courses.html
@@ -15,9 +15,10 @@
         {'endpoint': '.delete', 'label': 'Delete', 'method': 'DELETE', 'confirm': 'Are you sure you want to delete these courses? This operation is irreversible.'},
       ],
       columns=[
-        {'name': 'name', 'label': 'Name'},
+        {'name': 'hole_count', 'label': 'Holes'},
       ],
-      photo='photo_url',
+      title='name',
+      title_label='Name',
     ) 
   }}
 </div>
