--- a/fairplay/admin/templates/admin/audit-event.html
+++ b/fairplay/admin/templates/admin/audit-event.html
@@ -1,5 +1,6 @@
 {% extends 'admin/base.html' %}
 
+{% from 'admin/widgets/remote_addr.html' import render_remote_addr %}
 {% from 'admin/widgets/user.html' import render_user %}
 
 {% block title %}
@@ -27,7 +28,13 @@
         </div>
         <div class="col-md-6 mb-3">
           <h6>IP Address</h6>
-          <a href="{{ url_for('.audit_events', q=event.remote_addr) }}" title="More events from the same IP address">{{ event.remote_addr }}</a>
+          <div class="d-flex align-items-center">
+            <div class="me-2">{{ get_country_code(remote_addr, 'UN')|flag }}</div>
+            <div>
+              <a href="{{ url_for('.audit_events', q=event.remote_addr) }}" title="More events from the same IP address">{{ event.remote_addr }}</a>
+              <div class="small">{{ event.location }}</div>
+            </div>
+          </div>
         </div>
         <div class="col-md-6 mb-3">
           <h6>Request ID</h6>
@@ -52,7 +59,7 @@
         </div>
         <div class="col-12">
           <h6>Context</h6>
-          <code>{{ event.context|pprint }}</code>
+          <code><pre>{{ event.context|pprint }}</pre></code>
         </div>
       </div>
     </div>
