--- a/fairplay/admin/templates/admin/widgets/user.html
+++ b/fairplay/admin/templates/admin/widgets/user.html
@@ -4,6 +4,6 @@
   <img class="rounded-circle me-1" width="24" height="24" src="{{ user.photo_url }}"><span>{{ user.name }}</span>
 </div>
 {% else %}
-None
+<span class="text-muted">None</span>
 {% endif %}
 {% endmacro %}
