--- a/fairplay/courses/templates/admin/courses/hole.html
+++ b/fairplay/courses/templates/admin/courses/hole.html
@@ -1,16 +1,17 @@
 {% extends 'admin/base.html' %}
 
 {% from 'admin/form.html' import render_form %}
+{% from 'admin/list.html' import render_list %}
 {% import 'widgets/form.html' as form_widgets %}
 
 {% block title %}
-{% if hole %}Hole #{{ hole.number }}{% else %}New{% endif %}
+{% if hole %}{{ hole.display_name }}{% else %}New{% endif %}
 {% endblock %}
 
 {% block breadcrumbs %}
 {{ super() }}
 <li class="breadcrumb-item"><a href="{{ url_for('admin.courses.list') }}">Courses</a></li>
-<li class="breadcrumb-item"><a href="{{ url_for('admin.courses.read', id=course.id) }}">{{ course.name }} ({{ (course.id|string)[:8] }})</a></li>
+<li class="breadcrumb-item"><a href="{{ url_for('admin.courses.read', id=course.id) }}">{{ course.name }}</a></li>
 <li class="breadcrumb-item"><a href="{{ url_for('.list', course_id=course.id) }}">Holes</a></li>
 {% endblock %}
 
@@ -30,11 +31,14 @@
   <div class="row flex-row-reverse flex-md-row">
     <div class="col-12 col-md">
       <div class="row" style="max-width:768px;">
-        <div class="col-md-3 mb-3">
+        <div class="col-sm-3 mb-3">
           {{ form_widgets.render_field(form.number) }}
         </div>
+        <div class="col-sm-9 mb-3">
+          {{ form_widgets.render_field(form.name) }}
+        </div>
         <div class="col-md-12 mb-3">
-          {{ form_widgets.render_coordinates(form.pos) }}
+          {{ form_widgets.render_coordinates(form.pos, initial_zoom=17) }}
         </div>
       </div>
     </div>
@@ -43,5 +47,27 @@
     </div>
   </div>
   {% endcall %}
+
+  {% if course %}
+  <h2 class="my-3">Features</h2>
+
+  {{
+    render_list(
+      features,
+      actions=[
+        {'endpoint': '.features.delete', 'label': 'Delete', 'method': 'DELETE', 'confirm': 'Are you sure you want to delete these features? This operation is irreversible.'},
+      ],
+      columns=[
+        {'name': 'type', 'label': 'Type'},
+      ],
+      create_endpoint=".features.create",
+      endpoint_kwargs={'course_id': course.id, 'number': hole.number},
+      list_endpoint=".features.list",
+      read_endpoint=".features.read",
+      title='name',
+      title_label='Name'
+    )
+  }}
+  {% endif %}
 </div>
 {% endblock %}
