--- a/fairplay/courses/templates/admin/courses/holes.html
+++ b/fairplay/courses/templates/admin/courses/holes.html
@@ -6,7 +6,7 @@
 {% block breadcrumbs %}
 {{ super() }}
 <li class="breadcrumb-item"><a href="{{ url_for('admin.courses.list') }}">Courses</a></li>
-<li class="breadcrumb-item"><a href="{{ url_for('admin.courses.read', id=course.id) }}">{{ course.name }} ({{ (course.id|string)[:8] }})</a></li>
+<li class="breadcrumb-item"><a href="{{ url_for('admin.courses.read', id=course.id) }}">{{ course.name }}</a></li>
 {% endblock %}
 
 {% block title %}Holes{% endblock %}
@@ -21,10 +21,11 @@
         {'endpoint': '.delete', 'label': 'Delete', 'method': 'DELETE', 'confirm': 'Are you sure you want to delete these holes? This operation is irreversible.'},
       ],
       columns=[
-        {'name': 'number', 'label': 'Number'},
+        {'name': 'name', 'label': 'Name'},
       ],
       endpoint_kwargs={'course_id': course.id},
       endpoint_id='number',
+      title='number',
     ) 
   }}
 </div>
