--- a/fairplay/templates/widgets/form.html
+++ b/fairplay/templates/widgets/form.html
@@ -4,18 +4,18 @@
 </div>
 {% endmacro %}
 
-{% macro render_coordinates(field, height=None) %}
+{% macro render_coordinates(field, height=None, initial_zoom=14) %}
 {{ render_label(field) }}
-<div class="map row">
+<div class="row" >
   <div class="col-12 mb-3">
-    <div class="map-container"></div>
+    <div class="map" data-initial-zoom="{{ initial_zoom }}" data-latitude="#{{ field.lat.id }}" data-longitude="#{{ field.lon.id }}" data-draggable="true"></div>
   </div>
   <div class="col">
     <input
       id="{{ field.lat.id }}"
       name="{{ field.lat.name }}"
       type="number"
-      step="0.001"
+      step="0.0001"
       class="form-control map-latitude {% if field.lat.errors %}is-invalid{% endif %}"
       aria-describedby="{% if field.render_kw.description %}{{ field.id }}-description{% endif %} {% if field.lat.render_kw.description %}{{ field.lat.id }}-description{% endif %} {% for error in field.errors %}{{ field.id }}-error-{{ loop.index }} {% endfor %} {% for error in field.lat.errors %}{{ field.lat.id }}-error-{{ loop.index }} {% endfor %}"
       value="{{ field.lat.data or '' }}"
@@ -27,7 +27,7 @@
       id="{{ field.lon.id }}"
       name="{{ field.lon.name }}"
       type="number"
-      step="0.001"
+      step="0.0001"
       class="form-control map-longitude {% if field.lon.errors %}is-invalid{% endif %}"
       aria-describedby="{% if field.render_kw.description %}{{ field.id }}-description{% endif %} {% if field.lon.render_kw.description %}{{ field.lon.id }}-description{% endif %} {% for error in field.errors %}{{ field.id }}-error-{{ loop.index }} {% endfor %} {% for error in field.lon.errors %}{{ field.lon.id }}-error-{{ loop.index }} {% endfor %}"
       value="{{ field.lon.data or '' }}"
