--- a/fairplay/courses/templates/admin/courses/hole.html
+++ b/fairplay/courses/templates/admin/courses/hole.html
@@ -26,6 +26,7 @@
       ],
       endpoint_kwargs={'course_id': course.id},
       endpoint_id='number',
+      records=holes,
     ) 
   %}
   <div class="row flex-row-reverse flex-md-row">
