--- a/fairplay/admin/templates/admin/form.html
+++ b/fairplay/admin/templates/admin/form.html
@@ -3,6 +3,7 @@
   actions=[],
   endpoint_id='id',
   endpoint_kwargs={},
+  records=None,
   save=True,
   save_label='Save'
 ) %}
@@ -21,12 +22,37 @@
       </div>
       {% if record %}
       <div class="col-auto ms-auto">
-        <button class="btn btn-link text-reset pe-0" type="button" data-bs-toggle="dropdown" type="button" aria-expanded="false"><i class="fa fa-ellipsis-vertical fa-fw"></i></button>
-        <ul class="dropdown-menu dropdown-menu-end">
-          {% for action in actions|rejectattr('button', 'true') %}
-          <li><button class="dropdown-item" hx-{{ action.method or 'POST' }}="{{ url_for(action.endpoint, _method=action.method, **dict({endpoint_id: record[endpoint_id]}, **dict(endpoint_kwargs, **action.endpoint_kwargs or {}))) }}" {% if action.vars %}hx-vars='{{ action.vars|tojson }}'{% endif %} hx-include="input[name='next']" {% if action.confirm %}hx-confirm="{{ action.confirm }}"{% endif %} type="button">{{ action.label }}</button></li>
-          {% endfor %}
-        </ul>
+        <div class="row align-items-center g-2">
+          {% if records %}
+          <div class="col-auto me-2">
+            <span class="text-body-emphasis">{{ records.index(record) + 1 }}</span> of <span class="text-body-emphasis">{{ records|length }}</span> records
+          </div>
+          <div class="col-auto">
+            <nav aria-label="List pagination">
+              <ul class="pagination justify-content-end mb-0">
+                <li class="page-item">
+                  <a class="page-link {% if records.index(record) == 0 %}disabled{% endif %}" href="{% if records.index(record) > 0 %}{{ url_for(request.endpoint, **dict({endpoint_id: records[records.index(record) - 1][endpoint_id]}, **endpoint_kwargs)) }}{% else %}#{% endif %}" aria-label="Previous">
+                    <span aria-hidden="true"><i class="fa fa-arrow-left"></i></span>
+                  </a>
+                </li>
+                <li class="page-item">
+                  <a class="page-link {% if records.index(record) + 1 == records|length %}disabled{% endif %}" href="{% if records.index(record) + 1 < records|length %}{{ url_for(request.endpoint, **dict({endpoint_id: records[records.index(record) + 1][endpoint_id]}, **endpoint_kwargs)) }}{% else %}#{% endif %}" aria-label="Next">
+                    <span aria-hidden="true"><i class="fa fa-arrow-right"></i></span>
+                  </a>
+                </li>
+              </ul>
+            </nav>
+          </div>
+          {% endif %}
+          <div class="col-auto">
+            <button class="btn btn-link text-reset pe-0" type="button" data-bs-toggle="dropdown" type="button" aria-expanded="false"><i class="fa fa-ellipsis-vertical fa-fw"></i></button>
+            <ul class="dropdown-menu dropdown-menu-end">
+              {% for action in actions|rejectattr('button', 'true') %}
+              <li><button class="dropdown-item" hx-{{ action.method or 'POST' }}="{{ url_for(action.endpoint, _method=action.method, **dict({endpoint_id: record[endpoint_id]}, **dict(endpoint_kwargs, **action.endpoint_kwargs or {}))) }}" {% if action.vars %}hx-vars='{{ action.vars|tojson }}'{% endif %} hx-include="input[name='next']" {% if action.confirm %}hx-confirm="{{ action.confirm }}"{% endif %} type="button">{{ action.label }}</button></li>
+              {% endfor %}
+            </ul>
+          </div>
+        </div>
       </div>
       {% endif %}
     </div>
