--- a/fairplay/static/src/scss/index.scss
+++ b/fairplay/static/src/scss/index.scss
@@ -37,6 +37,7 @@
 @import "editor";
 @import "forms";
 
+@import "../../../../node_modules/maplibre-gl/dist/maplibre-gl.css";
 @import "../../../../node_modules/@fortawesome/fontawesome-svg-core/styles.css";
 
 :root {
