--- a/fairplay/admin/templates/admin/audit-event.html
+++ b/fairplay/admin/templates/admin/audit-event.html
@@ -29,7 +29,7 @@
         <div class="col-md-6 mb-3">
           <h6>IP Address</h6>
           <div class="d-flex align-items-center">
-            <div class="me-2">{{ get_country_code(remote_addr, 'UN')|flag }}</div>
+            <div class="me-2">{{ get_country_code(event.remote_addr, 'UN')|flag }}</div>
             <div>
               <a href="{{ url_for('.audit_events', q=event.remote_addr) }}" title="More events from the same IP address">{{ event.remote_addr }}</a>
               <div class="small">{{ event.location }}</div>
