--- a/fairplay/courses/templates/admin/courses/feature.html
+++ b/fairplay/courses/templates/admin/courses/feature.html
@@ -39,7 +39,7 @@
           {{ form_widgets.render_field(form.name) }}
         </div>
         <div class="col-md-12 mb-3">
-          {{ form_widgets.render_coordinates(form.coords, initial_zoom=17) }}
+          {{ form_widgets.render_coordinates(form.pos, initial_zoom=17) }}
         </div>
       </div>
     </div>
